--- a/Watching_Extremely_Awesome_Robots/app/src/main/res/layout/activity_auton.xml
+++ b/Watching_Extremely_Awesome_Robots/app/src/main/res/layout/activity_auton.xml
@@ -1,78 +1,221 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:background="@color/background_material_dark">
 
     <ScrollView
         android:id="@+id/titleWindow"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:ignore="UselessParent"
-        android:layout_marginRight="7dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:ignore="ScrollViewSize"
+
             >
 
-            <TextView
-                android:id="@+id/counterType"
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="objectsToCount"
-                android:textColor="@android:color/primary_text_dark"
-                android:textSize="40dp"
-                tools:ignore="HardcodedText,SpUsage"
-                />
+                android:layout_height="7dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/divider" />
 
             <LinearLayout
-                android:id="@+id/manual_Counter"
+                android:id="@+id/unlimitedCounter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:orientation="horizontal"
-                >
+                android:orientation="vertical"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp">
 
-                <Button
-                    android:id="@+id/subtractNum"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:text="-1"
-                    android:background="@color/colorAccent"
-                    android:textSize="15dp"
-                    tools:ignore="HardcodedText,SpUsage"
-                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="6dp"
+                    android:orientation="horizontal"
+
+                    >
+
+                    <TextView
+                        android:id="@+id/unlimitedItemType"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight=".7"
+                        android:background="@color/textBox"
+                        android:gravity="center"
+                        android:maxLines="1"
+                        android:padding="5dp"
+                        android:text="objectsToCount"
+                        android:textSize="30dp"
+
+                        />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:layout_marginRight="8dp"
+                        android:layout_weight=".3"
+                        android:background="@color/background_material_dark"
+                        android:maxLines="1"
+                        android:padding="5dp"
+                        android:text=""
+                        android:textColor="#ffffff"
+                        android:textSize="30dp" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/subtractNum"
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:background="@color/Button"
+                        android:text="-1"
+                        android:textSize="15dp" />
+
+                    <TextView
+                        android:id="@+id/displayNum"
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="2"
+                        android:background="#D7DDEA"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="0"
+                        android:textSize="37dp"
+                        tools:ignore="HardcodedText,SpUsage" />
+
+
+                    <Button
+                        android:id="@+id/addNum"
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:background="@color/colorAccent"
+                        android:text="+1"
+                        android:textSize="15dp" />
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="7dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/divider" />
+
+
+            <LinearLayout
+                android:id="@+id/taskToggle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/displayNum"
+                    android:id="@+id/task"
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
-                    android:layout_weight="2"
-                    android:gravity="center"
-                    android:text="0"
-                    android:textSize="40dp"
-                    tools:ignore="HardcodedText,SpUsage"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight=".7"
+                    android:background="@color/textBox"
+                    android:maxLines="1"
+                    android:padding="5dp"
+                    android:text="condition"
+                    android:textSize="30dp"
+
+                    />
+
+                <ToggleButton
+                    android:id="@+id/binaryToggle"
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight=".3"
+                    android:background="@drawable/toggle_button"
+
                     />
 
 
-                <Button
-                    android:id="@+id/addNum"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:text="+1"
-                    android:background="@color/colorAccent"
-                    android:textSize="15dp"
-                    tools:ignore="HardcodedText,SpUsage"
-                    />
 
+            </LinearLayout>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="7dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/divider" />
+
+            <LinearLayout
+                android:id="@+id/limitedCounter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="6dp"
+
+                    >
+
+                    <TextView
+                        android:id="@+id/limitedItemType"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight=".7"
+                        android:background="@color/textBox"
+                        android:gravity="center"
+                        android:maxLines="1"
+                        android:padding="5dp"
+                        android:text="objectsToCount"
+                        android:textSize="30dp"
+
+                        />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:layout_marginRight="8dp"
+                        android:layout_weight=".3"
+                        android:background="@color/background_material_dark"
+                        android:maxLines="1"
+                        android:padding="5dp"
+                        android:text="numseek"
+                        android:textColor="#ffffff"
+                        android:textSize="30dp" />
+
+
+                </LinearLayout>
+
+                <SeekBar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="13"
+
+                    />
 
             </LinearLayout>
 
