--- a/Watching_Extremely_Awesome_Robots/app/src/main/res/values/colors.xml
+++ b/Watching_Extremely_Awesome_Robots/app/src/main/res/values/colors.xml
@@ -3,13 +3,13 @@
     <color name="colorPrimary">#002699</color>
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#3366FF</color>
-    <color name="background_material_dark">#282828</color>
-    <color name="Button">#3366ff</color>
+    <color name="background_material">#282828</color>
+    <color name="Button">#3366FF</color>
     <color name="textLight">#ffffff</color>
     <color name="divider">#4b4b4b</color>
-    <color name="toggleOn">#3366ff</color>
-    <color name="toggleOff">#0036d7</color>
-    <color name="textBox">#D7DDEA</color>
+    <color name="toggleOn">#3366FF</color>
+    <color name="toggleOff">#2c385c</color>
+    <color name="textBox">#282828</color>
 
 
 
