--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/colors.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/colors.xml
@@ -27,6 +27,10 @@
     <color name="allianceLoss">#fa2d2d</color>
     <color name="allianceWin">#18ff23</color>
 
+    <color name="stillGreen">#006e05</color>
+
+
+
 
 
     <!--FF282828-->
