--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_post_match.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_post_match.xml
@@ -30,12 +30,11 @@
             android:background="@drawable/rounded_corners_chunk_material"
             android:orientation="horizontal"
             android:paddingBottom="10dp"
-            android:paddingLeft="4dp"
+            android:paddingLeft="11dp"
             android:paddingRight="4dp"
             android:paddingTop="10dp">
 
             <TextView
-                android:id="@+id/matchResultView"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center"
@@ -43,8 +42,7 @@
                 android:layout_weight=".7"
                 android:background="@color/white"
                 android:maxLines="1"
-                android:paddingLeft="11dp"
-                android:paddingRight="4dp"
+                android:padding="5dp"
                 android:text="Match Result"
                 android:textColor="@color/textMedium"
                 android:textSize="30dp"
@@ -101,6 +99,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight=".3"
                 android:background="@drawable/toggle_button_at"
+                android:onClick="setDisabled"
                 android:textOff="Not Disabled"
                 android:textOn="Disabled"
 
@@ -114,7 +113,6 @@
             android:background="@color/background_material" />
 
         <LinearLayout
-            android:id="@+id/commentCluster"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corners_chunk_material"
@@ -125,7 +123,6 @@
             android:paddingTop="10dp">
 
             <TextView
-                android:id="@+id/commentView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
@@ -142,6 +139,7 @@
                 />
 
             <EditText
+                android:id="@+id/comments"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Was very fast, bad drivers, accurate etc."
@@ -172,9 +170,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/lightBlue"
-                    android:onClick="goToTeleop"
+                    android:onClick="setSubmitData"
                     android:text="Submit Data" />
             </LinearLayout>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="8dp"
+                android:background="@color/background_material" />
 
         </LinearLayout> <!--Next-->
 
