--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_pre_match.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_pre_match.xml
@@ -12,8 +12,7 @@
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
         android:background="@color/background_material"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
@@ -33,6 +32,7 @@
 
 
             <EditText
+                android:id="@+id/teamNum"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
@@ -53,6 +53,7 @@
                 android:background="@color/background_material" />
 
             <EditText
+                android:id="@+id/matchNum"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="13dp"
@@ -64,7 +65,7 @@
                 android:shadowColor="#FF3297EA"
                 android:textColor="#000000"
                 android:textSize="22dp" />
-        </LinearLayout>
+        </LinearLayout> <!--Team/Match Number-->
 
         <ImageView
             android:layout_width="match_parent"
@@ -78,7 +79,7 @@
             android:background="@drawable/rounded_corners_chunk_material"
             android:orientation="horizontal"
             android:paddingBottom="10dp"
-            android:paddingLeft="4dp"
+            android:paddingLeft="11dp"
             android:paddingRight="4dp"
             android:paddingTop="10dp">
 
@@ -86,16 +87,14 @@
                 android:id="@+id/allianceColor"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
-                android:layout_gravity="center_vertical"
                 android:layout_marginRight="8dp"
                 android:layout_weight=".7"
                 android:background="@color/white"
                 android:maxLines="1"
                 android:padding="5dp"
                 android:text="Alliance Color"
-                android:textColor="@color/textDark"
+                android:textColor="@color/textMedium"
                 android:textSize="30dp"
-                android:textAlignment="center"
 
                 />
 
@@ -105,35 +104,56 @@
                 android:layout_height="fill_parent"
                 android:layout_weight=".3"
                 android:background="@drawable/alliance_toggle"
+                android:onClick="setAllianceColor"
                 android:textOff="Blue"
                 android:textOn="Red"
 
                 />
 
-        </LinearLayout>
+        </LinearLayout> <!--Alliance Selector-->
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            android:gravity="bottom|center"
-            android:layout_weight="1"
-            >
-            <Button
+            android:layout_height="match_parent"
+            android:background="@color/background_material"
+            android:gravity="center|bottom"
+            android:orientation="vertical">
+
+            <LinearLayout
                 android:id="@+id/goToAuton"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Start Scouting"
-                android:background="@drawable/blue_rounded_button"
-                android:layout_marginBottom="7dp"
+                android:background="@drawable/rounded_corners_chunk_material"
+                android:orientation="vertical"
+                android:paddingBottom="10dp"
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
-                android:onClick="goToAuton"
-                />
+                android:paddingTop="10dp">
 
-        </LinearLayout>
+                <Button
+                    android:id="@+id/pMNext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/lightBlue"
+                    android:onClick="setGoToAuton"
+                    android:text="Start Scouting"
+                    />
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="8dp"
+                android:background="@color/background_material" />
+
+        </LinearLayout>  <!--Next-->
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:background="@color/background_material" />
+
 
     </LinearLayout>
-
 
 </RelativeLayout>
