--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_home__screen.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/layout/activity_home__screen.xml
@@ -9,10 +9,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
         android:orientation="vertical"
-
         >
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="48dp"
@@ -21,66 +21,187 @@
             android:text="Main Menu"
             android:textSize="30dp" />
 
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corners_chunk_material"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp"
+            android:paddingLeft="11dp"
+            android:paddingRight="4dp"
+            android:paddingTop="10dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:layout_marginRight="8dp"
+                android:layout_weight=".75"
+                android:background="@color/white"
+                android:maxLines="1"
+                android:padding="5dp"
+                android:text="Match Scouter"
+                android:textColor="@color/textMedium"
+                android:textSize="30dp"
+
+                />
 
             <Button
                 android:id="@+id/goToPreMatch"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight=".25"
+                android:background="@color/darkBlue"
+                android:onClick="setGoToPreMatch"
+                android:text=">"
+                android:textSize="30dp"
+
+
+                />
+
+        </LinearLayout> <!--Match Scouter-->
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/background_material" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corners_chunk_material"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp"
+            android:paddingLeft="11dp"
+            android:paddingRight="4dp"
+            android:paddingTop="10dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
                 android:layout_gravity="center"
-                android:layout_marginBottom="23dp"
-                android:layout_weight=".33"
-                android:background="@drawable/rounded_button"
-                android:onClick="setPreMatch"
-                android:text="Start Scouting"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="20dp" />
+                android:layout_marginRight="8dp"
+                android:layout_weight=".75"
+                android:background="@color/white"
+                android:maxLines="1"
+                android:padding="5dp"
+                android:text="Generate QR"
+                android:textColor="@color/textMedium"
+                android:textSize="30dp"
+
+                />
 
             <Button
-                android:id="@+id/transferData"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:id="@+id/goToGenQR"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight=".25"
+                android:background="@color/mediumBlue"
+                android:onClick="setGoToGenQR"
+                android:text=">"
+                android:textSize="30dp"
+
+
+                />
+
+        </LinearLayout> <!--Generate QR Code-->
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/background_material" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corners_chunk_material"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp"
+            android:paddingLeft="11dp"
+            android:paddingRight="4dp"
+            android:paddingTop="10dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
                 android:layout_gravity="center"
-                android:layout_marginBottom="23dp"
-                android:layout_weight=".33"
-                android:background="@drawable/rounded_button"
-                android:onClick="setTransferData"
-                android:text="Transfer Data"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="20dp" />
+                android:layout_marginRight="8dp"
+                android:layout_weight=".75"
+                android:background="@color/white"
+                android:maxLines="1"
+                android:padding="5dp"
+                android:text="Master Scouter"
+                android:textColor="@color/textMedium"
+                android:textSize="30dp"
+
+                />
+
+            <Button
+                android:id="@+id/goToMaster"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight=".25"
+                android:background="@color/lightBlue"
+                android:onClick="setGoToPreMatch"
+                android:text=">"
+                android:textSize="30dp"
+
+
+                />
+
+        </LinearLayout> <!--Master-->
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/background_material" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corners_chunk_material"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp"
+            android:paddingLeft="11dp"
+            android:paddingRight="4dp"
+            android:paddingTop="10dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:layout_marginRight="8dp"
+                android:layout_weight=".75"
+                android:background="@color/white"
+                android:maxLines="1"
+                android:padding="5dp"
+                android:text="Settings"
+                android:textColor="@color/textMedium"
+                android:textSize="30dp"
+
+                />
 
             <Button
                 android:id="@+id/goToSettings"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:layout_weight=".33"
-                android:background="@drawable/rounded_button"
-                android:onClick="setSettings"
-                android:text="Settings"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="20dp" />
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight=".25"
+                android:background="@color/lighterBlue"
+                android:onClick="setGoToSettings"
+                android:text=">"
+                android:textSize="30dp"
 
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="16dp"
-                android:background="@color/background_material" />
+                />
 
-        </LinearLayout>
+        </LinearLayout> <!--Settings-->
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/background_material" />
 
     </LinearLayout>
-
 
 </RelativeLayout>
 
