--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/colors.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
     <color name="textDark">#464646</color>
     <color name="textMedium">#7c7c7c</color>
     <color name="textLight">#b6b6b6</color>
+    <color name="textWhite">#ffffff</color>
+
 
 
 
