--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/styles.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/styles.xml
@@ -7,9 +7,16 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:colorBackground">@color/background_material</item>
-        <item name="android:textColorPrimary">@android:color/background_light</item>
+        <item name="android:textColorPrimary">@color/textWhite</item>
         <item name="colorControlActivated">@color/lightBlue</item>
         <item name="colorButtonNormal">@color/lightBlue</item>
+        <item name="android:spinnerDropDownItemStyle">@style/mySpinnerItemStyle</item>
+        <item name="android:spinnerItemStyle">@style/mySpinnerItemStyle</item>
     </style>
+    <style name="mySpinnerItemStyle" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
+        <item name="android:textColor">@color/textMedium</item>
+        <item name="android:textSize">25dp</item>
+    </style>
+
 
 </resources>
